--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,8 @@
 *.user
 *.userosscache
 *.sln.docstates
+server/obj/
+.vscode/
  # User-specific files (MonoDevelop/Xamarin Studio)
 *.userprefs
  # Build results
