--- a/server/Properties/launchSettings.json
+++ b/server/Properties/launchSettings.json
@@ -19,9 +19,9 @@
     },
     "dotnet_core_aad": {
       "commandName": "Project",
-      "launchBrowser": true,
-      "launchUrl": "api/values",
-      "applicationUrl": "https://localhost:5001;http://localhost:5000",
+      "launchBrowser": false,
+      "launchUrl": "api/customers",
+      "applicationUrl": "http://localhost:5000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
